# Near-Hunger-thon

./: .gitignore  LICENSE  README.md
Hambre/: Cargo.toml
Hambre/src/: lib.rs
front_end/: index.html  package-lock.json  package.json
front_end/src/: App.jsx
front_end/src/utils/: config.js  utils.js
front_end_2/: package-lock.json  package.json
front_end_2/src/: App.js  index.html  index.js
front_end_2/src/components/: Dropdown.js  Navbar.js
front_end_2/src/utils/: config.js  utils.js
middleend/: f  f.pas
moshi/: .firebaserc  README.md  firebase.json  package-lock.json  package.json
moshi/contract/: Cargo.toml  deploy.sh
moshi/contract/neardev/: dev-account  dev-account.env
moshi/contract/src/: lib.rs
moshi/frontend/: .firebaserc  .gitignore  .near-wallet.js.swp  App.js  Infura.js  firebase.json  index.html  index.js  near-interface.js  near-wallet.js  package-lock.json  package.json  pinata.js
moshi/frontend/.firebase/: hosting.ZGlzdA.cache
moshi/frontend/assets/: global.css
moshi/frontend/components/: .PostResourceForm.js.swp  .Profile.js.swp  ContactModal.js  Dropdown.css  Dropdown.js  DropdownF.css  DropdownF.js  FarmInputs.js  FarmInputsModal.css  FarmInputsModal.js  FarmProduce.js  FarmResource.css  FarmResource.js  FarmerFarm.css  FarmerFarm.js  FarmerInvestors.js  Footer.js  Hire.js  HireLand.css  HireLand.js  HireLandView.js  Home.js  InputBuy.js  InputView.js  Invest.js  ItemsList.js  LandHire.js  Marketplace.js  MarketplaceDrop.css  MarketplaceDropdown.js  Navbar.js  (+30 more)
moshi/ui images/: Screencast from 13-12-2022  5:05:18 WB.webm
