[package]
name = "Hambre"
version = "0.1.0"
edition = "2021"
authors = ["Felix Awere <felixawere01@gmail.com>", "Peter Kagwe <kagwepeter07@gmail.com>", "Ted Adams <ogolated00@gmail.com>", "Brian Onchezz"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"

[lib]
crate-type = ["cdylib"]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
