[package]
name = "moshi"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0-pre.7"
uint = { version = "0.9.3", default-features = false }
cashify = "0.1.1"

[profile.release]
codegen-units = 1
opt-level = "z"
ito = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
